# zbricks

./: .gitignore  README.md  pyproject.toml
docs/: README.md
examples/: README.md
examples/hello-world/hello/: app.py
examples/hello-world/tests/: test_hello_world.py
examples/sample-project/project/: app.py
examples/sample-project/tests/: test_sample_project.py
src/zbricks/: __init__.py  config.py
src/zbricks/core/: __init__.py
src/zbricks/hosts/: __init__.py  flask.py
src/zbricks/live/: sqla.py
src/zbricks/themes/: __init__.py
src/zbricks/themes/templates/: _base.html  layout.html  simple.html
tests/: conftest.py  test_flask.py  test_foo.py  test_zbrick.py
